<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stefanoiaconetti.personalfitness_app.BMIFragment">


    <TextView
        android:id="@+id/BMITitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_title"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/title_size"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/height_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/weight_input"
        android:inputType="numberDecimal"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/BMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_size" />

    <Button
        android:id="@+id/calculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/BMI_button"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/BMIInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_info_title"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/BMIInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/bmi_info"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</LinearLayout>
