<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stefanoiaconetti.personalfitness_app.WaterIntakeFragment">

    <TextView
        android:id="@+id/waterIntakeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waterIntakeTitle"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/exerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oftenExercise"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <Spinner
        android:id="@+id/waterIntakeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/weightEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight_input"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/findoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waterIntakeBtn"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/calculationsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

</LinearLayout>
